--- a/addons/event/views/event_question_views.xml
+++ b/addons/event/views/event_question_views.xml
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record id="event_question_view_search" model="ir.ui.view">
+        <field name="name">event.question.view.search</field>
+        <field name="model">event.question</field>
+        <field name="arch" type="xml">
+            <search string="Search Event Question">
+                <field name="title"/>
+                <field name="question_type"/>
+                <field name="answer_ids"/>
+                <filter string="Mandatory"
+                        name="filter_is_mandatory_answer"
+                        domain="[('is_mandatory_answer', '=', True)]"/>
+                <filter string="Not mandatory"
+                        name="filter_is_not mandatory_answer"
+                        domain="[('is_mandatory_answer', '=', False)]"/>
+                <separator/>
+                <filter string="Once per order"
+                        name="filter_once_per_order"
+                        domain="[('once_per_order', '=', True)]"/>
+                <filter string="For each attendee"
+                        name="filter_for_each_attendee"
+                        domain="[('once_per_order', '=', False)]"/>
+                <group>
+                    <filter string="Event" name="group_by_event" context="{'group_by': 'event_ids'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
     <record id="event_question_view_form" model="ir.ui.view">
         <field name="name">event.question.view.form</field>
         <field name="model">event.question</field>
         <field name="arch" type="xml">
             <form string="Question">
                 <sheet>
+                    <div class="alert alert-warning" role="alert"
+                        invisible="event_count == 0">
+                        This question is used by
+                        <button class="oe_link p-0 align-baseline" type="object" name="action_event_view">
+                            <field name="event_count"/>
+                            events
+                        </button>.
+                    </div>
                     <h1 class="d-flex"><field name="title" placeholder='e.g. "Do you have any diet restrictions?"' class="flex-grow-1"/></h1>
                     <group>
                         <group>
@@ -31,5 +67,36 @@
                 </sheet>
             </form>
         </field>
+    </record>
+
+    <record id="event_question_view_list" model="ir.ui.view">
+        <field name="name">event.question.view.list</field>
+        <field name="model">event.question</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="title"/>
+                <field name="is_mandatory_answer" string="Mandatory"/>
+                <field name="once_per_order" string="Once per Order"/>
+                <field name="question_type" string="Type"/>
+                <field name="answer_ids" widget="many2many_tags"
+                    invisible="question_type != 'simple_choice'"/>
+            </list>
+        </field>
+    </record>
+
+    <record id="event_question_action" model="ir.actions.act_window">
+        <field name="name">Event Question</field>
+        <field name="res_model">event.question</field>
+        <field name="view_mode">list,form</field>
+        <field name="search_view_id" ref="event.event_question_view_search"/>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                No questions yet! Please create one.
+            </p>
+        </field>
+    </record>
+
+    <record id="event_question_menu" model="ir.ui.menu">
+        <field name="action" ref="event.event_question_action"/>
     </record>
 </odoo>
