--- a/addons/mrp_subcontracting/views/stock_picking_views.xml
+++ b/addons/mrp_subcontracting/views/stock_picking_views.xml
@@ -5,14 +5,9 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
-            <xpath expr="//button[@name='button_validate'][hasclass('o_btn_validate')]" position="before">
-                <field name="display_action_record_components" invisible="1"/>
-                <button name="action_record_components" class="oe_highlight" invisible="display_action_record_components != 'mandatory'" string="Record components" type="object" data-hotkey="shift+x"/>
-                <button name="action_record_components" invisible="display_action_record_components != 'facultative'" string="Record components" type="object" data-hotkey="shift+x"/>
-            </xpath>
-            <xpath expr="//field[@name='move_ids']//list//button[@name='action_show_details']" position="before">
+            <xpath expr="//field[@name='move_ids']//list//button[@name='action_show_details']" position="after">
                 <field name="show_subcontracting_details_visible" column_invisible="True"/>
-                <button name="action_show_subcontract_details" string="Subcontracting" type="object" icon="fa-pencil" width="0.1"
+                <button name="action_show_subcontract_details" string="Register Production" type="object" width="0.1"
                     invisible="not show_subcontracting_details_visible"/>
             </xpath>
             <xpath expr="//field[@name='move_ids']/list//field[@name='quantity']" position="attributes">
