--- a/addons/point_of_sale/views/pos_config_view.xml
+++ b/addons/point_of_sale/views/pos_config_view.xml
@@ -67,6 +67,18 @@
                                 The Epson receipt printer will be used instead of the receipt printer connected to the IoT Box.
                             </div>
                         </setting>
+                        <!-- Use Epson server direct printer for receipts (the printer will poll a controller to retreive the receipt) -->
+                        <setting id="use_epson_server_direct_print" string="Epson Server Direct Printer" help="Configure a printer which will retreive receipts from your database">
+                            <field name="use_epson_server_direct_print"/>
+                            <div class="row" invisible="not use_epson_server_direct_print">
+                                <div class="col-lg-5 o_light_label">
+                                    <label string="Server Direct Print URL" for="epson_server_direct_print_url"/>
+                                </div>
+                                <div class="col-lg-7">
+                                    <field name="epson_server_direct_print_url" widget="CopyClipboardChar"/>
+                                </div>
+                            </div>
+                        </setting>
                         <setting string="IoT Box" help="Connect devices using an IoT Box">
                                 <field name="is_posbox" />
                                 <div class="content-group pos_iot_config ms-3" invisible="not is_posbox">
