[IMP] website, website_sale: search bar result template
Before this commit
==================
- The placeholder text in the website search bar snippet was hardcoded
  and could not be changed through the website editor.
- When searching for a keyword, the matched term in the description was
  only highlighted if it appeared near the beginning of the text. As a
  result, relevant matches deeper in the content were harder to locate,
  reducing user clarity and search result usefulness.
- Only default search result template was available.
- Search was only limited to title and description for products.

After this commit
=================
- The search bar snippet's placeholder is now editable from the website
  editor.
- Search descriptions now automatically shift to show the first
  occurrence of the matched word in context. The result still
  highlights the matching keyword, but now shows the surrounding
  sentence snippet, starting with an ellipsis (`...`) when the match is
  not at the beginning.
- Multiple search result templates made available
- Search for products can be made across:
  - Title
  - Price
  - Description
  - Barcode
  - Attributes

task-4029264

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -3013,8 +3013,9 @@ Sitemap: <t t-out="url_root"/>sitemap.xml
 <template id="website_search_box" name="Website Searchbox">
     <div t-attf-class="input-group #{_classes}" role="search">
         <t t-set="search_placeholder">Search...</t>
-        <input type="search" name="search" t-att-class="'search-query form-control oe_search_box %s %s' % (_input_classes or '', '' if default_style else 'border-0 bg-light')" t-att-placeholder="placeholder if placeholder else search_placeholder" t-att-value="search"/>
+        <input type="search" name="search" t-att-class="'search-query form-control oe_search_box %s %s' % (_input_classes or '', '' if default_style else 'border-0 bg-light')" t-att-placeholder="placeholder if placeholder else search_placeholder" t-att-value="search" t-att-data-placeholder="placeholder" t-att-data-template-id="'website.s_searchbar.autocomplete'"/>
         <button type="submit" t-att-class="'btn oe_search_button %s' % (_submit_classes or ('btn-primary' if default_style else 'btn-light'))" aria-label="Search" title="Search">
+            <span class="o_total_search_count"></span>
             <i class="oi oi-search"/>
             <span t-if="search" class="oe_search_found">
                 <small>(<t t-out="search_count or 0"/> found)</small>
