[IMP] project: add rotting fields
Project task types and tasks models are modified to take advantage
of the new rotting logic of the mail.tracking.duration mixin, allowing
to get a better sense of when a task gets stale.

When a task spends too long without seeing activity (record
updates, chatter messages, completed activities)..., it will
appear in a different color in kanban views, to highlight it
and bring it to attention.

task-4684660

Part-of: odoo/odoo#223430
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/project/views/project_sharing_project_task_views.xml
+++ b/addons/project/views/project_sharing_project_task_views.xml
@@ -94,6 +94,11 @@
             <field name="partner_id" position="attributes">
                 <attribute name="column_invisible">0</attribute>
             </field>
+            <field name="is_rotting" position="replace"/>
+            <field name="rotting_days" position="replace"/>
+            <field name="stage_id" position="attributes">
+                <attribute name="widget">selection_badge</attribute>
+            </field>
         </field>
     </record>
 
