[IMP] hr_recruitment: add rotting fields
Recruitment stages and applications are modified to take advantage
of the new rotting logic of the mail.tracking.duration mixin, allowing
to get a better sense of when an application gets stale.

When an applicant spends too long without seeing activity
(record updates, chatter messages, completed activities)...,
it will appear in a different color in kanban views,
to highlight it and bring it to attention.

task-4684660

Part-of: odoo/odoo#223430
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/hr_recruitment/views/hr_recruitment_stage_views.xml
+++ b/addons/hr_recruitment/views/hr_recruitment_stage_views.xml
@@ -24,6 +24,7 @@
                 <list string="Stages">
                     <field name="sequence" widget="handle"/>
                     <field name="name"/>
+                    <field name="rotting_threshold_days" optional="hide"/>
                     <field name="fold"/>
                     <field name="hired_stage"/>
                 </list>
@@ -73,6 +74,7 @@
                                 </span>
                             </span>
                             <field name="job_ids" widget="many2many_tags"/>
+                            <field name="rotting_threshold_days" invisible="hired_stage"/>
                         </group>
                     </group>
                     <group name="tooltips" string="Tooltips">
