[FIX] mrp: prevent division by zero error in split wizard
Issue Before This Commit:
---------------------------
When setting the Max Batch Size to 0 in the split wizard, a division by zero
error was thrown. Additionally, if the value was 0 or negative, no alert was
shown to the user.

Steps to produce:
---------------------------
- Create a Manufacturing order.
- Open the Split wizard.
- Set the Max Batch Size to `0`.
- A `division by zero` traceback is raised.
- No warning or alert is shown to guide the user.

With this Commit:
---------------------------
A proper validation check has been added to prevent the division by zero error.
If the user enters 0 or a negative value for Max Batch Size, the system now
displays a user-friendly alert message:
“The total should be equal to the quantity to produce.”
This prevents crashes and ensures a smoother and uninterrupted user workflow.

Task ID: [4395548](https://www.odoo.com/odoo/project/966/tasks/4395548)

closes odoo/odoo#208275

Related: odoo/enterprise#84605
Related: odoo/upgrade#7638
Signed-off-by: Quentin Wolfs (quwo) <quwo@odoo.com>

--- a/addons/mrp/wizard/mrp_production_split.xml
+++ b/addons/mrp/wizard/mrp_production_split.xml
@@ -59,7 +59,7 @@
                     </field>
                     <field name="production_split_multi_id" invisible="1"/>
                     <field name="valid_details" invisible="1"/>
-                    <div class="alert alert-danger" role="alert" invisible="valid_details or max_batch_size &lt;= 0">
+                    <div class="alert alert-danger" role="alert" invisible="valid_details and max_batch_size &gt; 0">
                         The total should be equal to the quantity to produce.
                     </div>
                     <footer>
